- Added %e date format code (thanks Paul Jenkins)
- Added split filter

v1.6.1 - 2011-09-30
- Updated TypeUtility.IsAnonymousType to detect anonymous types when running on Mono
- Removed System.Web reference for .NET 4.0 version because System.Web.HttpUtility can be replaced by System.Net.WebUtility
- Changed the overload of Template.Render that takes in a stream to use TextWriter instead of StreamWriter. This change
  will not require code changes in client code, but will require a recompilation.
- DotLiquid is now compatible with .NET 4.0 Client Profile

v1.6.0 - 2011-06-25
- Added SymbolSource support to NuGet package generation script
- Planning to use semantic versioning for future releases (http://semver.org/)

v1.5.6.0 - 2011-06-21
- ERB-like trimming now works correctly for \r\n newlines

v1.5.4.0 - 2011-04-30
- Because it's a common (and easy) mistake to use C# property names while Template.NamingConvention is set to
  RubyNamingConvention, and this situation is both surprising and difficult to debug, I have added
  a "special case" error message when the code detects that the property name doesn't match, but would
  match if you used a Ruby-style name.

v1.5.3.0 - 2011-04-05
- Minor fixes to error handling in Include tag; now returns (or throws, if RenderParameters.RethrowErrors is true) correct error message.
- Minor fixes to null template handling in LocalFileSystem

v1.5.2.0 - 2011-03-19
- "Assign" tag now works correctly with European (i.e. comma) decimal separators.
- If "Assign" tag is used with a decimal (or float or double) value, and the decimal
  separator for the current culture is ",", then the code will first try parsing
  using "," and then fallback to the invariant culture's decimal separator (".").

v1.5.1.0 - 2011-03-19
- Filters can now access the current context. To do this, modify your filter method(s) to take
  in a Context object as the first argument. DotLiquid will automatically pass the current
  context to your filter.