@@ -218,6 +218,13 @@ namespace DotLiquid.Tests
 			Helper.AssertTemplateResult("4", "{{ input | minus:operand }}", Hash.FromAnonymousObject(new { input = 5, operand = 1 }));
 		}
 
+		[Test, SetCulture("fr-FR")]
+		public void TestMinusWithFrenchDecimalSeparator()
+		{
+			Helper.AssertTemplateResult(string.Format("1{0}2", CultureInfo.CurrentCulture.NumberFormat.NumberDecimalSeparator),
+				"{{ 3,2 | minus:2 }}");
+		}
+
 		[Test]
 		public void TestTimes()
 		{
