@@ -1,3 +1,4 @@
+- Allow filters in assign
 - Added %e date format code (thanks Paul Jenkins)
 - Added split filter
 
